Assignement4.97521441/gen1/AssignmentStAss4Parser.py
# Generated from C:/Users/1379fgh/Documents/Compiler/Assignment4\AssignmentStAss4.g4 by ANTLR 4.9.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys




class AssignmentStAss4Parser ( Parser ):

    grammarFileName = "AssignmentStAss4.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'class'", u"'{'", u"'}'", u"'('", u"'['", 
                     u"']'", u"')'", u"'extend'", u"';'", u"','", u"'return'", 
                     u"'while'", u"'System.out.println'", u"'='", u"'if'", 
                     u"'<'", u"'+'", u"'-'", u"'*'", u"'&&'", u"'.'", u"'length'", 
                     u"'true'", u"'false'", u"'!'", u"'public'", u"'static'", 
                     u"'void'", u"'main'", u"'else'", u"'this'", u"'new'", 
                     u"'int'", u"'String'", u"'bool'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"Public", u"Static", 
                      u"Void", u"Main", u"Else", u"This", u"New", u"IntType", 
                      u"String", u"BoolType", u"BinaryOperator", u"Integer", 
                      u"Identifier", u"WS", u"COMMENT", u"LINE_COMMENT" ]

    RULE_program = 0
    RULE_mainClass = 1
    RULE_mainClassDeclare = 2
    RULE_mainMethodDecl = 3
    RULE_mainMethodBody = 4
    RULE_classDeclare = 5
    RULE_varDeclation = 6
    RULE_methodDecl = 7
    RULE_methodBody = 8
    RULE_type = 9
    RULE_statement = 10
    RULE_ifst = 11
    RULE_exp = 12
    RULE_identifier = 13
    RULE_binOperator = 14

    ruleNames =  [ u"program", u"mainClass", u"mainClassDeclare", u"mainMethodDecl", 
                   u"mainMethodBody", u"classDeclare", u"varDeclation", 
                   u"methodDecl", u"methodBody", u"type", u"statement", 
                   u"ifst", u"exp", u"identifier", u"binOperator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    Public=26
    Static=27
    Void=28
    Main=29
    Else=30
    This=31
    New=32
    IntType=33
    String=34
    BoolType=35
    BinaryOperator=36
    Integer=37
    Identifier=38
    WS=39
    COMMENT=40
    LINE_COMMENT=41

    def __init__(self, input, output=sys.stdout):
        super(AssignmentStAss4Parser, self).__init__(input, output=output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AssignmentStAss4Parser.ProgramContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()

        def mainClass(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.MainClassContext,0)


        def EOF(self):
            return self.getToken(AssignmentStAss4Parser.EOF, 0)

        def classDeclare(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(AssignmentStAss4Parser.ClassDeclareContext)
            else:
                return self.getTypedRuleContext(AssignmentStAss4Parser.ClassDeclareContext,i)


        def getRuleIndex(self):
            return AssignmentStAss4Parser.RULE_program

        def enterRule(self, listener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitProgram"):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = AssignmentStAss4Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.mainClass()
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AssignmentStAss4Parser.T__0:
                self.state = 31
                self.classDeclare()
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 37
            self.match(AssignmentStAss4Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AssignmentStAss4Parser.MainClassContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()

        def mainClassDeclare(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.MainClassDeclareContext,0)


        def getRuleIndex(self):
            return AssignmentStAss4Parser.RULE_mainClass

        def enterRule(self, listener):
            if hasattr(listener, "enterMainClass"):
                listener.enterMainClass(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMainClass"):
                listener.exitMainClass(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMainClass"):
                return visitor.visitMainClass(self)
            else:
                return visitor.visitChildren(self)




    def mainClass(self):

        localctx = AssignmentStAss4Parser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(AssignmentStAss4Parser.T__0)
            self.state = 40
            self.mainClassDeclare()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassDeclareContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AssignmentStAss4Parser.MainClassDeclareContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()

        def identifier(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.IdentifierContext,0)


        def mainMethodDecl(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.MainMethodDeclContext,0)


        def getRuleIndex(self):
            return AssignmentStAss4Parser.RULE_mainClassDeclare

        def enterRule(self, listener):
            if hasattr(listener, "enterMainClassDeclare"):
                listener.enterMainClassDeclare(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMainClassDeclare"):
                listener.exitMainClassDeclare(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMainClassDeclare"):
                return visitor.visitMainClassDeclare(self)
            else:
                return visitor.visitChildren(self)




    def mainClassDeclare(self):

        localctx = AssignmentStAss4Parser.MainClassDeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mainClassDeclare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.identifier()
            self.state = 43
            self.match(AssignmentStAss4Parser.T__1)
            self.state = 44
            self.mainMethodDecl()
            self.state = 45
            self.match(AssignmentStAss4Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainMethodDeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AssignmentStAss4Parser.MainMethodDeclContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()

        def Public(self):
            return self.getToken(AssignmentStAss4Parser.Public, 0)

        def Static(self):
            return self.getToken(AssignmentStAss4Parser.Static, 0)

        def Void(self):
            return self.getToken(AssignmentStAss4Parser.Void, 0)

        def Main(self):
            return self.getToken(AssignmentStAss4Parser.Main, 0)

        def String(self):
            return self.getToken(AssignmentStAss4Parser.String, 0)

        def identifier(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.IdentifierContext,0)


        def mainMethodBody(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.MainMethodBodyContext,0)


        def getRuleIndex(self):
            return AssignmentStAss4Parser.RULE_mainMethodDecl

        def enterRule(self, listener):
            if hasattr(listener, "enterMainMethodDecl"):
                listener.enterMainMethodDecl(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMainMethodDecl"):
                listener.exitMainMethodDecl(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMainMethodDecl"):
                return visitor.visitMainMethodDecl(self)
            else:
                return visitor.visitChildren(self)




    def mainMethodDecl(self):

        localctx = AssignmentStAss4Parser.MainMethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_mainMethodDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(AssignmentStAss4Parser.Public)
            self.state = 48
            self.match(AssignmentStAss4Parser.Static)
            self.state = 49
            self.match(AssignmentStAss4Parser.Void)
            self.state = 50
            self.match(AssignmentStAss4Parser.Main)
            self.state = 51
            self.match(AssignmentStAss4Parser.T__3)
            self.state = 52
            self.match(AssignmentStAss4Parser.String)
            self.state = 53
            self.match(AssignmentStAss4Parser.T__4)
            self.state = 54
            self.match(AssignmentStAss4Parser.T__5)
            self.state = 55
            self.identifier()
            self.state = 56
            self.match(AssignmentStAss4Parser.T__6)
            self.state = 57
            self.mainMethodBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainMethodBodyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AssignmentStAss4Parser.MainMethodBodyContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()

        def statement(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.StatementContext,0)


        def getRuleIndex(self):
            return AssignmentStAss4Parser.RULE_mainMethodBody

        def enterRule(self, listener):
            if hasattr(listener, "enterMainMethodBody"):
                listener.enterMainMethodBody(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMainMethodBody"):
                listener.exitMainMethodBody(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMainMethodBody"):
                return visitor.visitMainMethodBody(self)
            else:
                return visitor.visitChildren(self)




    def mainMethodBody(self):

        localctx = AssignmentStAss4Parser.MainMethodBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mainMethodBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(AssignmentStAss4Parser.T__1)
            self.state = 60
            self.statement()
            self.state = 61
            self.match(AssignmentStAss4Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclareContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AssignmentStAss4Parser.ClassDeclareContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()

        def identifier(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(AssignmentStAss4Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(AssignmentStAss4Parser.IdentifierContext,i)


        def varDeclation(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(AssignmentStAss4Parser.VarDeclationContext)
            else:
                return self.getTypedRuleContext(AssignmentStAss4Parser.VarDeclationContext,i)


        def methodDecl(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(AssignmentStAss4Parser.MethodDeclContext)
            else:
                return self.getTypedRuleContext(AssignmentStAss4Parser.MethodDeclContext,i)


        def getRuleIndex(self):
            return AssignmentStAss4Parser.RULE_classDeclare

        def enterRule(self, listener):
            if hasattr(listener, "enterClassDeclare"):
                listener.enterClassDeclare(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitClassDeclare"):
                listener.exitClassDeclare(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitClassDeclare"):
                return visitor.visitClassDeclare(self)
            else:
                return visitor.visitChildren(self)




    def classDeclare(self):

        localctx = AssignmentStAss4Parser.ClassDeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classDeclare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(AssignmentStAss4Parser.T__0)
            self.state = 64
            self.identifier()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AssignmentStAss4Parser.T__7:
                self.state = 65
                self.match(AssignmentStAss4Parser.T__7)
                self.state = 66
                self.identifier()


            self.state = 69
            self.match(AssignmentStAss4Parser.T__1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AssignmentStAss4Parser.IntType) | (1 << AssignmentStAss4Parser.BoolType) | (1 << AssignmentStAss4Parser.Identifier))) != 0):
                self.state = 70
                self.varDeclation()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AssignmentStAss4Parser.Public:
                self.state = 76
                self.methodDecl()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.match(AssignmentStAss4Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AssignmentStAss4Parser.VarDeclationContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()

        def type(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.IdentifierContext,0)


        def getRuleIndex(self):
            return AssignmentStAss4Parser.RULE_varDeclation

        def enterRule(self, listener):
            if hasattr(listener, "enterVarDeclation"):
                listener.enterVarDeclation(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitVarDeclation"):
                listener.exitVarDeclation(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitVarDeclation"):
                return visitor.visitVarDeclation(self)
            else:
                return visitor.visitChildren(self)




    def varDeclation(self):

        localctx = AssignmentStAss4Parser.VarDeclationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varDeclation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.type()
            self.state = 85
            self.identifier()
            self.state = 86
            self.match(AssignmentStAss4Parser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AssignmentStAss4Parser.MethodDeclContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()

        def Public(self):
            return self.getToken(AssignmentStAss4Parser.Public, 0)

        def type(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(AssignmentStAss4Parser.TypeContext)
            else:
                return self.getTypedRuleContext(AssignmentStAss4Parser.TypeContext,i)


        def identifier(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(AssignmentStAss4Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(AssignmentStAss4Parser.IdentifierContext,i)


        def methodBody(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.MethodBodyContext,0)


        def Identifier(self, i=None):
            if i is None:
                return self.getTokens(AssignmentStAss4Parser.Identifier)
            else:
                return self.getToken(AssignmentStAss4Parser.Identifier, i)

        def getRuleIndex(self):
            return AssignmentStAss4Parser.RULE_methodDecl

        def enterRule(self, listener):
            if hasattr(listener, "enterMethodDecl"):
                listener.enterMethodDecl(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMethodDecl"):
                listener.exitMethodDecl(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMethodDecl"):
                return visitor.visitMethodDecl(self)
            else:
                return visitor.visitChildren(self)




    def methodDecl(self):

        localctx = AssignmentStAss4Parser.MethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_methodDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(AssignmentStAss4Parser.Public)
            self.state = 89
            self.type()
            self.state = 90
            self.identifier()
            self.state = 91
            self.match(AssignmentStAss4Parser.T__3)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AssignmentStAss4Parser.IntType) | (1 << AssignmentStAss4Parser.BoolType) | (1 << AssignmentStAss4Parser.Identifier))) != 0):
                self.state = 92
                self.type()
                self.state = 93
                self.identifier()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AssignmentStAss4Parser.T__9:
                    self.state = 94
                    self.match(AssignmentStAss4Parser.T__9)
                    self.state = 95
                    self.type()
                    self.state = 96
                    self.match(AssignmentStAss4Parser.Identifier)
                    self.state = 102
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 105
            self.match(AssignmentStAss4Parser.T__6)
            self.state = 106
            self.methodBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodBodyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AssignmentStAss4Parser.MethodBodyContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()

        def exp(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.ExpContext,0)


        def varDeclation(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(AssignmentStAss4Parser.VarDeclationContext)
            else:
                return self.getTypedRuleContext(AssignmentStAss4Parser.VarDeclationContext,i)


        def statement(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(AssignmentStAss4Parser.StatementContext)
            else:
                return self.getTypedRuleContext(AssignmentStAss4Parser.StatementContext,i)


        def getRuleIndex(self):
            return AssignmentStAss4Parser.RULE_methodBody

        def enterRule(self, listener):
            if hasattr(listener, "enterMethodBody"):
                listener.enterMethodBody(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMethodBody"):
                listener.exitMethodBody(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMethodBody"):
                return visitor.visitMethodBody(self)
            else:
                return visitor.visitChildren(self)




    def methodBody(self):

        localctx = AssignmentStAss4Parser.MethodBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_methodBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(AssignmentStAss4Parser.T__1)
            self.state = 112
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 109
                    self.varDeclation() 
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AssignmentStAss4Parser.T__1) | (1 << AssignmentStAss4Parser.T__11) | (1 << AssignmentStAss4Parser.T__12) | (1 << AssignmentStAss4Parser.T__14) | (1 << AssignmentStAss4Parser.Identifier))) != 0):
                self.state = 115
                self.statement()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.match(AssignmentStAss4Parser.T__10)
            self.state = 122
            self.exp(0)
            self.state = 123
            self.match(AssignmentStAss4Parser.T__8)
            self.state = 124
            self.match(AssignmentStAss4Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AssignmentStAss4Parser.TypeContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()

        def identifier(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.IdentifierContext,0)


        def IntType(self):
            return self.getToken(AssignmentStAss4Parser.IntType, 0)

        def BoolType(self):
            return self.getToken(AssignmentStAss4Parser.BoolType, 0)

        def getRuleIndex(self):
            return AssignmentStAss4Parser.RULE_type

        def enterRule(self, listener):
            if hasattr(listener, "enterType"):
                listener.enterType(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitType"):
                listener.exitType(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitType"):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type(self):

        localctx = AssignmentStAss4Parser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_type)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.identifier()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(AssignmentStAss4Parser.IntType)
                self.state = 128
                self.match(AssignmentStAss4Parser.T__4)
                self.state = 129
                self.match(AssignmentStAss4Parser.T__5)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.match(AssignmentStAss4Parser.BoolType)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 131
                self.match(AssignmentStAss4Parser.IntType)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(AssignmentStAss4Parser.StatementContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()


        def getRuleIndex(self):
            return AssignmentStAss4Parser.RULE_statement

     
        def copyFrom(self, ctx):
            super(AssignmentStAss4Parser.StatementContext, self).copyFrom(ctx)
            self.value_attr = ctx.value_attr
            self.type_attr = ctx.type_attr



    class Statement_whileContext(StatementContext):

        def __init__(self, parser, ctx): # actually a AssignmentStAss4Parser.StatementContext)
            super(AssignmentStAss4Parser.Statement_whileContext, self).__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.ExpContext,0)

        def statement(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.StatementContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterStatement_while"):
                listener.enterStatement_while(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStatement_while"):
                listener.exitStatement_while(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitStatement_while"):
                return visitor.visitStatement_while(self)
            else:
                return visitor.visitChildren(self)


    class Statement_lbContext(StatementContext):

        def __init__(self, parser, ctx): # actually a AssignmentStAss4Parser.StatementContext)
            super(AssignmentStAss4Parser.Statement_lbContext, self).__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(AssignmentStAss4Parser.StatementContext)
            else:
                return self.getTypedRuleContext(AssignmentStAss4Parser.StatementContext,i)


        def enterRule(self, listener):
            if hasattr(listener, "enterStatement_lb"):
                listener.enterStatement_lb(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStatement_lb"):
                listener.exitStatement_lb(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitStatement_lb"):
                return visitor.visitStatement_lb(self)
            else:
                return visitor.visitChildren(self)


    class Statement_systemContext(StatementContext):

        def __init__(self, parser, ctx): # actually a AssignmentStAss4Parser.StatementContext)
            super(AssignmentStAss4Parser.Statement_systemContext, self).__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.ExpContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterStatement_system"):
                listener.enterStatement_system(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStatement_system"):
                listener.exitStatement_system(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitStatement_system"):
                return visitor.visitStatement_system(self)
            else:
                return visitor.visitChildren(self)


    class Statement_equalContext(StatementContext):

        def __init__(self, parser, ctx): # actually a AssignmentStAss4Parser.StatementContext)
            super(AssignmentStAss4Parser.Statement_equalContext, self).__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.IdentifierContext,0)

        def exp(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.ExpContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterStatement_equal"):
                listener.enterStatement_equal(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStatement_equal"):
                listener.exitStatement_equal(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitStatement_equal"):
                return visitor.visitStatement_equal(self)
            else:
                return visitor.visitChildren(self)


    class Statement_ifContext(StatementContext):

        def __init__(self, parser, ctx): # actually a AssignmentStAss4Parser.StatementContext)
            super(AssignmentStAss4Parser.Statement_ifContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ifst(self):
            return self.getTypedRuleContext(AssignmentStAss4Parser.IfstContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterStatement_if"):
                listener.enterStatement_if(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStatement_if"):
                listener.exitStatement_if(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitStatement_if"):
                return visitor.visitStatement_if(self)
            else:
                return visitor.visitChildren(self)


    class Statement_equalwithbraContext(StatementContext):
